# wae

./: .editorconfig  .gitignore  Cargo.toml  add-method.mjs  biome.json  copy-files.mjs  fix-lib.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  rewrite-lib.mjs  rustfmt.toml  schemas.example.yaml
backends/wae-ai/: Cargo.toml  readme.md
backends/wae-ai/src/: lib.rs
backends/wae-ai/src/capabilities/: ai_image.rs  chat.rs  mod.rs  text_to_image.rs  video.rs
backends/wae-ai/src/providers/: hunyuan.rs  mod.rs  volcengine.rs
backends/wae-ai/tests/: main.rs
backends/wae-authentication/: Cargo.toml
backends/wae-authentication/src/: lib.rs  readme.md
backends/wae-authentication/src/csrf/: config.rs  error.rs  mod.rs  service.rs
backends/wae-authentication/src/jwt/: claims.rs  codec.rs  config.rs  errors.rs  mod.rs  service.rs
backends/wae-authentication/src/oauth2/: client.rs  config.rs  errors.rs  mod.rs  types.rs
backends/wae-authentication/src/password/: config.rs  error.rs  hasher.rs  mod.rs
backends/wae-authentication/src/rate_limit/: config.rs  error.rs  (+2 more)
backends/wae-authentication/tests/: jwt_codec_tests.rs  main.rs
backends/wae-cache/: Cargo.toml  readme.md
backends/wae-cache/src/: lib.rs  redis.rs
backends/wae-cache/tests/: lib_tests.rs  main.rs
backends/wae-config/: Cargo.toml  readme.md  test-config.mjs
backends/wae-config/src/: lib.rs
backends/wae-config/tests/: lib_tests.rs  main.rs
backends/wae-crypto/: Cargo.toml  readme.md
backends/wae-crypto/benches/: crypto_bench.rs
backends/wae-crypto/src/: base64.rs  error.rs  hash.rs  hmac.rs  lib.rs  password.rs  totp.rs
backends/wae-crypto/tests/: base64_tests.rs  hash_tests.rs  hmac_tests.rs  main.rs  password_tests.rs  totp_tests.rs
backends/wae-database/: Cargo.toml  readme.md
backends/wae-database/src/: extract.rs  lib.rs  readme.md  schema.rs  types.rs
backends/wae-database/tests/: lib_tests.rs  main.rs
backends/wae-distributed/: Cargo.toml  readme.md
backends/wae-distributed/src/: lib.rs
backends/wae-distributed/tests/: lib_tests.rs  main.rs
backends/wae-effect/: Cargo.toml  readme.md
backends/wae-effect/src/: lib.rs
backends/wae-effect/tests/: lib_tests.rs  main.rs
backends/wae-email/: Cargo.toml  readme.md
backends/wae-email/src/: lib.rs  mime.rs  sendmail.rs  smtp.rs
backends/wae-email/tests/: lib_tests.rs  main.rs  mime_tests.rs  sendmail_tests.rs  smtp_tests.rs
backends/wae-event/: Cargo.toml  readme.md
backends/wae-event/src/: lib.rs
backends/wae-event/tests/: lib_tests.rs  main.rs
backends/wae-https/: Cargo.toml  Cargo.toml.temp  readme.md
backends/wae-https/src/: lib.rs  lib.rs.original  readme.md  tls.rs
backends/wae-https/tests/: cors_tests.rs  error_tests.rs  extract_tests.rs  main.rs  middleware_tests.rs  template_tests.rs
backends/wae-macros/: Cargo.toml  readme.md
backends/wae-macros/src/: lib.rs  query.rs
backends/wae-macros/tests/: lib_tests.rs  main.rs
backends/wae-monitoring/: Cargo.toml  readme.md
backends/wae-monitoring/src/: lib.rs
backends/wae-monitoring/tests/: lib_tests.rs  main.rs
backends/wae-observability/: Cargo.toml  readme.md
backends/wae-observability/src/: lib.rs
backends/wae-observability/tests/: lib_tests.rs  main.rs
backends/wae-queue/: Cargo.toml  build.rs  readme.md
backends/wae-queue/src/: consumers.rs  lib.rs  producers.rs  services.rs  types.rs
backends/wae-queue/tests/: lib_tests.rs  main.rs
backends/wae-request/: Cargo.toml  readme.md
backends/wae-request/src/: lib.rs
backends/wae-request/tests/: lib_tests.rs  main.rs
backends/wae-resilience/: Cargo.toml  readme.md
backends/wae-resilience/src/: bulkhead.rs  circuit_breaker.rs  error.rs  lib.rs  pipeline.rs  rate_limiter.rs  retry.rs  timeout.rs
backends/wae-resilience/tests/: bulkhead.rs  circuit_breaker.rs  lib_tests.rs  main.rs  pipeline.rs  rate_limiter.rs  retry.rs  test_retry_debug.rs  timeout.rs
backends/wae-scheduler/: Cargo.toml  readme.md
backends/wae-scheduler/src/: cron.rs  delayed.rs  error.rs  interval.rs  lib.rs  task.rs
backends/wae-scheduler/tests/: cron.rs  delayed.rs  interval.rs  lib_tests.rs  main.rs  task.rs
backends/wae-schema/: Cargo.toml  readme.md
backends/wae-schema/src/: lib.rs  schema.rs
backends/wae-schema/tests/: lib_tests.rs  main.rs  openapi_builder_tests.rs  swagger_ui_tests.rs
backends/wae-search/: Cargo.toml  readme.md
backends/wae-search/src/: elasticsearch.rs  lib.rs  opensearch.rs
backends/wae-search/tests/: lib_tests.rs  main.rs
backends/wae-server/: Cargo.toml  readme.md
backends/wae-server/src/: lib.rs
backends/wae-server/tests/: lib_tests.rs
backends/wae-service/: Cargo.toml  readme.md
backends/wae-service/src/: lib.rs
backends/wae-service/tests/: lib_tests.rs  main.rs
backends/wae-session/: Cargo.toml
backends/wae-session/src/: config.rs  extract.rs  layer.rs  lib.rs  readme.md  session.rs  store.rs
backends/wae-session/tests/: lib_tests.rs  main.rs
backends/wae-storage/: Cargo.toml  readme.md
backends/wae-storage/src/: lib.rs
backends/wae-storage/tests/: cos_test.rs  lib_tests.rs  main.rs
backends/wae-testing/: Cargo.toml  readme.md
backends/wae-testing/src/: assertions.rs  benchmark.rs  containers.rs  contract.rs  db_mock.rs  environment.rs  error.rs  fixture.rs  fuzz.rs  http_client.rs  lib.rs  load_test.rs  mock.rs  service_mock.rs
backends/wae-testing/tests/: benchmark_tests.rs  lib_tests.rs  load_test_tests.rs  main.rs
backends/wae-tools/: Cargo.toml  readme.md
backends/wae-tools/src/: lib.rs  main.rs  migration.rs  schema_sync.rs
backends/wae-tools/tests/: auto_migrate_tests.rs  main.rs  migration_tests.rs
backends/wae-types/: Cargo.toml  readme.md
backends/wae-types/benches/: types_bench.rs
backends/wae-types/src/: error.rs  lib.rs  value.rs
backends/wae-types/tests/: error_tests.rs  lib_tests.rs  value_tests.rs
backends/wae-websocket/: Cargo.toml  readme.md
backends/wae-websocket/src/: lib.rs
backends/wae-websocket/tests/: lib_tests.rs  main.rs
tests/: Cargo.toml
tests/src/: main.rs
(+272 files in other folders)
