[package]
name = "wae-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/oovm/wae/tree/main/backends/wae-ai"
homepage = "https://github.com/oovm/wae/tree/main/backends/wae-ai"
description = "WAE AI - AI 服务抽象层，支持腾讯混元、火山引擎等"
keywords = ["ai", "llm", "chat", "text-to-image", "hunyuan"]
categories = ["api-bindings", "asynchronous"]
documentation = "https://docs.rs/wae-ai"

[dependencies]
wae-types = { workspace = true }
wae-request = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
