[package]
name = "wae-authentication"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/oovm/wae/tree/main/backends/wae-authentication"
homepage = "https://github.com/oovm/wae/tree/main/backends/wae-authentication"
description = "WAE Authentication - 认证服务模块，支持 JWT、OAuth2、TOTP、SAML"
keywords = ["authentication", "jwt", "oauth2", "totp", "saml"]
categories = ["authentication", "web-programming"]
documentation = "https://docs.rs/wae-authentication"

[dependencies]
wae-types = { workspace = true }
wae-request = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

jsonwebtoken = { workspace = true }
base64 = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
url = { workspace = true }
rand = { workspace = true }
quick-xml = { workspace = true }
flate2 = { workspace = true }
bcrypt = { workspace = true }
zeroize = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
