[package]
name = "wae-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/oovm/wae/tree/main/backends/wae-config"
homepage = "https://github.com/oovm/wae/tree/main/backends/wae-config"
description = "WAE Config - 多层级配置管理，支持 TOML/YAML/环境变量"
keywords = ["config", "configuration", "toml", "yaml", "env"]
categories = ["config", "development-tools"]
documentation = "https://docs.rs/wae-config"

[dependencies]
wae-types = { workspace = true }
itools-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
