[package]
name = "wae-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/oovm/wae/tree/main/backends/wae-crypto"
homepage = "https://github.com/oovm/wae/tree/main/backends/wae-crypto"
description = "WAE Crypto - 统一加密抽象模块"
keywords = ["crypto", "hash", "hmac", "totp", "password"]
categories = ["cryptography"]
documentation = "https://docs.rs/wae-crypto"

[dependencies]
wae-types = { workspace = true }
zeroize = { workspace = true }
base64 = { workspace = true }
hmac = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
bcrypt = { workspace = true }
argon2 = { workspace = true }
rand = { version = "0.8.5", features = ["std"] }
rand_core = { version = "0.6.4" }
hex = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "crypto_bench"
harness = false
