[package]
name = "wae-database"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/oovm/wae/tree/main/backends/wae-database"
homepage = "https://github.com/oovm/wae/tree/main/backends/wae-database"
description = "WAE Database - 数据库服务抽象层，支持 Turso/PostgreSQL/MySQL"
keywords = ["database", "sqlite", "postgres", "mysql", "orm"]
categories = ["database", "asynchronous"]
documentation = "https://docs.rs/wae-database"

[dependencies]
wae-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
turso = { workspace = true, optional = true }
tokio-postgres = { workspace = true, optional = true }
deadpool-postgres = { workspace = true, optional = true }
mysql_async = { workspace = true, optional = true }
async-trait = { workspace = true }

[features]
default = ["turso"]
turso = ["dep:turso"]
postgres = ["dep:tokio-postgres", "dep:deadpool-postgres"]
mysql = ["dep:mysql_async"]
