[package]
name = "wae-database"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/oovm/wae/tree/main/backends/wae-database"
homepage = "https://github.com/oovm/wae/tree/main/backends/wae-database"
description = "WAE Database - 数据库服务抽象层，支持 Turso/PostgreSQL/MySQL"
keywords = ["database", "sqlite", "postgres", "mysql", "orm"]
categories = ["database", "asynchronous"]
documentation = "https://docs.rs/wae-database"

[dependencies]
wae-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true }
limbo = { workspace = true, optional = true }
tokio-postgres = { workspace = true, optional = true }
deadpool-postgres = { workspace = true, optional = true }
mysql_async = { workspace = true, optional = true }
async-trait = { workspace = true }
http = { workspace = true }
tower = { workspace = true }
pin-project-lite = { workspace = true }

[features]
default = ["limbo"]
limbo = ["dep:limbo"]
postgres = ["dep:tokio-postgres", "dep:deadpool-postgres"]
mysql = ["dep:mysql_async"]
