[package]
name = "wae-distributed"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/oovm/wae/tree/main/backends/wae-distributed"
homepage = "https://github.com/oovm/wae/tree/main/backends/wae-distributed"
description = "WAE Distributed - 分布式服务支持，分布式锁、分布式ID"
keywords = ["distributed", "lock", "id-generator", "consensus"]
categories = ["concurrency", "asynchronous"]
documentation = "https://docs.rs/wae-distributed"

[dependencies]
wae-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
