[package]
name = "wae-effect"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository = "https://github.com/oovm/wae/tree/main/backends/wae-effect"
homepage = "https://github.com/oovm/wae/tree/main/backends/wae-effect"
description = "WAE Effect - 代数效应依赖注入，声明式依赖获取"
keywords = ["effect", "dependency-injection", "di", "algebraic-effects"]
categories = ["rust-patterns", "asynchronous"]
documentation = "https://docs.rs/wae-effect"

[dependencies]
wae-types = { workspace = true }
wae-config = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
