[package]
name = "wae-email"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/oovm/wae/tree/main/backends/wae-email"
homepage = "https://github.com/oovm/wae/tree/main/backends/wae-email"
description = "WAE Email - 邮件服务抽象层，支持 SMTP/Sendmail/Direct"
keywords = ["email", "smtp", "sendmail", "mail"]
categories = ["email", "network-programming"]
documentation = "https://docs.rs/wae-email"

[dependencies]
wae-types = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
hickory-resolver = { workspace = true }
base64 = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
