[package]
name = "wae-event"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository = "https://github.com/oovm/wae/tree/main/backends/wae-event"
homepage = "https://github.com/oovm/wae/tree/main/backends/wae-event"
description = "WAE Event - 事件驱动模块，支持发布订阅模式"
keywords = ["event", "pubsub", "message", "event-bus"]
categories = ["asynchronous", "concurrency"]
documentation = "https://docs.rs/wae-event"

[dependencies]
wae-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
