[package]
name = "wae-https"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/oovm/wae/tree/main/backends/wae-https"
homepage = "https://github.com/oovm/wae/tree/main/backends/wae-https"
description = "WAE HTTPS - HTTP/HTTPS 服务核心模块，构建器模式、中间件、统一响应"
keywords = ["http", "https", "server", "tls", "axum"]
categories = ["web-programming", "network-programming"]
documentation = "https://docs.rs/wae-https"

[dependencies]
wae-types = { workspace = true }
wae-session = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["compression-gzip", "compression-br", "compression-deflate"] }
hyper = { workspace = true }
hyper-util = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
http-body = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
tokio-rustls = { workspace = true, features = ["ring"] }
rustls-pemfile = { workspace = true }
pin-project-lite = { workspace = true }
futures-util = { workspace = true }
askama = { workspace = true }
