[package]
name = "wae-https"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/oovm/wae/tree/main/backends/wae-https"
homepage = "https://github.com/oovm/wae/tree/main/backends/wae-https"
description = "WAE HTTPS - HTTP/HTTPS 服务核心模块，构建器模式、中间件、统一响应"
keywords = ["http", "https", "server", "tls", "hyper"]
categories = ["web-programming", "network-programming"]
documentation = "https://docs.rs/wae-https"

[dependencies]
wae-types = { workspace = true }
wae-session = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["compression-gzip", "compression-br", "compression-deflate", "limit", "timeout", "catch-panic", "normalize-path", "set-header", "fs"] }
hyper = { workspace = true, features = ["full"] }
hyper-util = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
http-body = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
tokio-rustls = { workspace = true, features = ["ring"] }
rustls-pemfile = { workspace = true }
pin-project-lite = { workspace = true }
futures-util = { workspace = true }
askama = { workspace = true }
bytes = { workspace = true }
matchit = { workspace = true }
axum = { workspace = true, features = ["multipart", "ws"] }
mime_guess = { workspace = true }
