[package]
name = "wae-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository = "https://github.com/oovm/wae/tree/main/backends/wae-macros"
homepage = "https://github.com/oovm/wae/tree/main/backends/wae-macros"
description = "WAE Macros - 过程宏支持，提供派生宏和属性宏"
keywords = ["macros", "proc-macro", "derive"]
categories = ["development-tools::procedural-macro-helpers"]
documentation = "https://docs.rs/wae-macros"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
