[package]
name = "wae-monitoring"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/oovm/wae/tree/main/backends/wae-monitoring"
homepage = "https://github.com/oovm/wae/tree/main/backends/wae-monitoring"
description = "WAE Monitoring - 告警服务抽象层，支持 AlertManager 和 PagerDuty"
keywords = ["monitoring", "alerting", "alertmanager", "pagerduty"]
categories = ["api-bindings", "web-programming"]
documentation = "https://docs.rs/wae-monitoring"

[features]
default = []
alertmanager = []
pagerduty = []

[dependencies]
wae-types = { workspace = true }
wae-request = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
systemstat = "0.2.3"
