[package]
name = "wae-observability"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/oovm/wae/tree/main/backends/wae-observability"
homepage = "https://github.com/oovm/wae/tree/main/backends/wae-observability"
description = "WAE Observability - 可观测性服务抽象层，提供健康检查、指标、日志和追踪能力"
keywords = ["observability", "health", "metrics", "tracing", "logging"]
categories = ["asynchronous", "web-programming"]
documentation = "https://docs.rs/wae-observability"

[features]
default = []
health = []
metrics = []
json-log = []
otlp = ["opentelemetry", "rand_core"]
profiling = []
full = ["health", "metrics", "json-log", "otlp", "profiling"]

[dependencies]
wae-types = { workspace = true }
wae-request = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
http-body-util = { workspace = true }
tower = { workspace = true }
futures-util = { workspace = true }
pin-project-lite = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }

opentelemetry = { version = "0.26", optional = true }
rand_core = { workspace = true, optional = true }
