[package]
name = "wae-queue"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/oovm/wae/tree/main/backends/wae-queue"
homepage = "https://github.com/oovm/wae/tree/main/backends/wae-queue"
description = "WAE Queue - 消息队列抽象层，支持内存队列"
keywords = ["queue", "message-queue", "async", "messaging"]
categories = ["asynchronous", "concurrency"]
documentation = "https://docs.rs/wae-queue"

[dependencies]
wae-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
