[package]
name = "wae-queue"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/oovm/wae/tree/main/backends/wae-queue"
homepage = "https://github.com/oovm/wae/tree/main/backends/wae-queue"
description = "WAE Queue - 消息队列抽象层，支持内存队列、Redis 和 RabbitMQ"
keywords = ["queue", "message-queue", "async", "messaging", "redis"]
categories = ["asynchronous", "concurrency"]
documentation = "https://docs.rs/wae-queue"

[features]
default = []
redis-backend = ["dep:redis", "dep:base64"]
rabbitmq-backend = ["dep:lapin"]
kafka-backend = ["dep:rdkafka", "dep:base64"]
pulsar-backend = ["dep:pulsar", "dep:base64"]

[build-dependencies]
protoc-bin-vendored = "3.2"

[dependencies]
wae-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true, optional = true }
redis = { workspace = true, optional = true }
lapin = { workspace = true, optional = true }
rdkafka = { workspace = true, optional = true }
pulsar = { workspace = true, optional = true }
