[package]
name = "wae-request"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository = "https://github.com/oovm/wae/tree/main/backends/wae-request"
homepage = "https://github.com/oovm/wae/tree/main/backends/wae-request"
description = "WAE Request - HTTP 客户端封装，支持 TLS"
keywords = ["http", "client", "request", "tls"]
categories = ["web-programming", "network-programming"]
documentation = "https://docs.rs/wae-request"

[dependencies]
wae-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }
tracing = { workspace = true }
http = { workspace = true }
url = { workspace = true }
hyper = { workspace = true }
hyper-tls = { workspace = true }
hyper-util = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
