[package]
name = "wae-resilience"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository = "https://github.com/oovm/wae/tree/main/backends/wae-resilience"
homepage = "https://github.com/oovm/wae/tree/main/backends/wae-resilience"
description = "WAE Resilience - 弹性模式，熔断器、限流器、重试、超时"
keywords = ["resilience", "circuit-breaker", "rate-limiter", "retry", "timeout"]
categories = ["asynchronous", "concurrency"]
documentation = "https://docs.rs/wae-resilience"

[dependencies]
wae-types = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
