[package]
name = "wae-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository = "https://github.com/oovm/wae/tree/main/backends/wae-scheduler"
homepage = "https://github.com/oovm/wae/tree/main/backends/wae-scheduler"
description = "WAE Scheduler - 任务调度器，支持 Cron、定时任务、延迟任务"
keywords = ["scheduler", "cron", "job", "task", "timer"]
categories = ["asynchronous", "date-and-time"]
documentation = "https://docs.rs/wae-scheduler"

[dependencies]
wae-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
