[package]
name = "wae-search"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/oovm/wae/tree/main/backends/wae-search"
homepage = "https://github.com/oovm/wae/tree/main/backends/wae-search"
description = "WAE Search - 搜索服务抽象层"
keywords = ["search", "elasticsearch", "opensearch", "async"]
categories = ["web-programming", "asynchronous"]
documentation = "https://docs.rs/wae-search"

[features]
default = []

[dependencies]
wae-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
