[package]
name = "wae-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/oovm/wae/tree/main/backends/wae"
homepage = "https://github.com/oovm/wae/tree/main/backends/wae"
description = "WAE - 微服务优先的 Rust 异步框架，All-in-one 入口"
keywords = ["async", "tokio", "microservice", "framework"]
categories = ["asynchronous", "web-programming", "network-programming"]

[lib]
name = "wae"

[dependencies]
wae-types = { workspace = true }
wae-storage = { workspace = true }
wae-ai = { workspace = true }
wae-email = { workspace = true }
wae-config = { workspace = true }
wae-database = { workspace = true, optional = true }
wae-https = { workspace = true }
wae-session = { workspace = true }
wae-service = { workspace = true }
wae-effect = { workspace = true }
wae-resilience = { workspace = true }
wae-scheduler = { workspace = true }
wae-websocket = { workspace = true }
wae-event = { workspace = true }
wae-distributed = { workspace = true }
wae-testing = { workspace = true }
wae-tools = { workspace = true, optional = true }

[features]
default = []
database-turso = ["wae-database/turso"]
database-postgres = ["wae-database/postgres"]
database-mysql = ["wae-database/mysql"]
tools = ["wae-tools"]
