[package]
name = "wae-service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository = "https://github.com/oovm/wae/tree/main/backends/wae-service"
homepage = "https://github.com/oovm/wae/tree/main/backends/wae-service"
description = "WAE Service - 服务发现与注册，负载均衡策略"
keywords = ["service-discovery", "load-balancing", "microservice", "registry"]
categories = ["network-programming", "asynchronous"]
documentation = "https://docs.rs/wae-service"

[dependencies]
wae-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true }
async-trait = { workspace = true }
