[package]
name = "wae-session"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository = "https://github.com/oovm/wae/tree/main/backends/wae-session"
homepage = "https://github.com/oovm/wae/tree/main/backends/wae-session"
description = "WAE Session - 会话管理，支持内存存储"
keywords = ["session", "cookie", "auth"]
categories = ["web-programming", "authentication"]
documentation = "https://docs.rs/wae-session"

[dependencies]
wae-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
dashmap = { workspace = true }
time = { workspace = true }
cookie = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
