[package]
name = "wae-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository = "https://github.com/oovm/wae/tree/main/backends/wae-storage"
homepage = "https://github.com/oovm/wae/tree/main/backends/wae-storage"
description = "WAE Storage - 存储服务抽象层，支持腾讯云 COS、阿里云 OSS、AWS S3、Google Cloud Storage、本地存储"
keywords = ["storage", "cos", "oss", "s3", "gcs"]
categories = ["api-bindings", "filesystem"]
documentation = "https://docs.rs/wae-storage"

[dependencies]
wae-types = { workspace = true }
serde = { workspace = true }
hmac = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
chrono = { workspace = true }
